Hotkeys and cleanup

--- a/ExoCounter/LabeledCounter.xaml
+++ b/ExoCounter/LabeledCounter.xaml
@@ -12,6 +12,6 @@
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Label x:Name="lblLabel" Content="Label" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Row="0" Grid.Column="0" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" FontSize="100"/>
-        <Label x:Name="lblCounter" Content="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Row="0" Grid.Column="1" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="100"/>
+        <Label x:Name="lblCounter" Content="0" ContentStringFormat="D2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Row="0" Grid.Column="1" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="100"/>
     </Grid>
 </UserControl>
