--- a/ExoCounter/MainWindow.xaml
+++ b/ExoCounter/MainWindow.xaml
@@ -7,5 +7,5 @@
         mc:Ignorable="d"
         Title="ExoCounter" Height="325" Width="550"
         Closing="Window_Closing">
-    <Grid Name="grdMain" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+    <Grid Name="grdMain" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="Black" />
 </Window>
